<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <artifactId>distribution-mechanism</artifactId>
    <groupId>graduation.jiankai</groupId>
    <version>1.0-SNAPSHOT</version>
  </parent>

  <artifactId>message-queue-core</artifactId>
  <version>1.0-SNAPSHOT</version>

  <name>message-queue-core</name>

  <properties>
    <maven.compiler.source>17</maven.compiler.source>
    <maven.compiler.target>17</maven.compiler.target>
    <sonar.coverage.jacoco.xmlReportPaths>${project.basedir}/${aggregate.report.dir}</sonar.coverage.jacoco.xmlReportPaths>
  </properties>

 <dependencies>
   <dependency>
     <groupId>graduation.jiankai</groupId>
     <artifactId>application-configurations</artifactId>
     <version>1.0-SNAPSHOT</version>
   </dependency>
   <dependency>
     <groupId>graduation.jiankai</groupId>
     <artifactId>data-storage</artifactId>
     <version>1.0-SNAPSHOT</version>
   </dependency>
 </dependencies>
</project>
